--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ jobs:
               \"messages\": [
                 {
                   \"role\": \"user\",
-                  \"content\": \"hello\"
+                  \"content\": \"$CHAT_GPT_PROMPT\"
                 }
               ]
             }" 
