--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ env:
   CURRENT_VERSION: ${{ github.event.pull_request.milestone.title }}
 
 jobs:
-  update-changelog:
+  update_changelog:
     runs-on: ubuntu-latest
     if: ${{ github.event.label.name == 'release' }}
     steps:
@@ -20,7 +20,7 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.ref }}
 
-      - name: Fetch PRs in current version's milestone
+      - name: Fetch PRs in current version's milestone and write a question to ChatGPT
         run: |
           RESPONSE=$(curl -H "Accept: application/vnd.github+json" -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/search/issues?q=milestone:${{ env.CURRENT_VERSION }}+type:pr+repo:$GITHUB_REPOSITORY")
 
@@ -29,43 +29,26 @@ jobs:
             exit 1
           fi
 
-          PRS_IN_MILESTONE=$(echo "$RESPONSE" | jq '.items[] | select(.pull_request.merged_at != null and (.labels | map(select(.name == "release")) | length == 0)) | {title: .title, number: .number, url: .html_url, package: .labels[].name}' | jq -s tostring)
-          echo "PRS_IN_MILESTONE=$PRS_IN_MILESTONE" >> $GITHUB_ENV
+          PRS_IN_MILESTONE=$(echo "$RESPONSE" | jq '.items[] | select(.pull_request.merged_at != null and (.labels | map(select(.name == "release")) | length == 0)) | {title: .title, number: .number, url: .html_url, package: .labels[].name}' | jq -s tostring | sed 's/^"//;s/"$//')
+          echo "CHAT_GPT_PROMPT=$(echo Please write me a markdown using this data \`\`\`$PR_LIST\`\`\`in the following format \\n\`\`\`\\n### package\\n- title [#number]\(url\)\\n- title [#number]\(url\)\\n\\n### package\\n\\n- title [#number]\(url\)\\n- title [#number]\(url\)\`\`\`\\nPlease filter out emojis when writing package name in the markdown, and if the item has multiple packages write it in multiple package group. ${package} should only be one package, not multiple packages.)" >> $GITHUB_ENV
 
       - name: Request ChatGPT to write down CHANGELOG
         env:
           OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
         run: |
-          PR_LIST=$(echo ${{ env.PRS_IN_MILESTONE }} | jq tostring | sed 's/^"//;s/"$//')
-          # CHAT_GPT_PROMPT=$(echo Write down a markdown content based on this data\\n $PR_LIST \\nin the following format:\\n### package\\n\\n- title [#number]\(url\)\\n- title [#number]\(url\)\\n\\n### other package\\n\\n- title [#number]\(url\)\\n- title [#number]\(url\)\\n\\n. Please filter out emojis when writing package name in the markdown.)
-          CHAT_GPT_PROMPT=$(echo "Please write me a markdown using this data \`\`\`$PR_LIST\`\`\`in the following format \\n\`\`\`\\n### package\\n- title [#number]\(url\)\\n- title [#number]\(url\)\\n\\n### package\\n\\n- title [#number]\(url\)\\n- title [#number]\(url\)\`\`\`\\nPlease filter out emojis when writing package name in the markdown, and if the item has multiple packages write it in multiple package group. ${package} should only be one package, not multiple packages.")
-          
-          echo 123
-          echo "{
-            \"model\": \"gpt-3.5-turbo\",
-            \"temperature\": 0.2,
-            \"messages\": [
-              {
-                \"role\": \"user\",
-                \"content\": \"$CHAT_GPT_PROMPT\"
-              }
-            ]
-          }" 
-          echo 123
-
           RESPONSE=$(curl -X POST https://api.openai.com/v1/chat/completions \
            -H "Content-Type: application/json" \
            -H "Authorization: Bearer $OPENAI_KEY" \
-           -d "{
-              \"model\": \"gpt-3.5-turbo\",
-              \"temperature\": 0.2,
-              \"messages\": [
+           -d '{
+              "model": "gpt-3.5-turbo",
+              "temperature": 0.2,
+              "messages": [
                 {
-                  \"role\": \"user\",
-                  \"content\": \"$CHAT_GPT_PROMPT\"
+                  "role": "user",
+                  "content": "${{ env.CHAT_GPT_PROMPT }}"
                 }
               ]
-            }" 
+            }' 
           )
 
           echo $RESPONSE | jq
