--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,11 +17,13 @@ jobs:
     steps:
       - name: Check the milestone
         run: |
+          echo ${{ env.CURRENT_VERSION }}
+          echo ${{ github.event.pull_request.milestone }}
           if [[ ${{ env.CURRENT_VERSION }} == null ]]; then
             echo "마일스톤을 등록해 주세요."
             exit 1
           fi
-          
+
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
