--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,8 @@ jobs:
 
       - name: Check the milestone
         run: |
-          echo ${{ env.CURRENT_VERSION }}
-          echo ${{ github.event.pull_request.milestone }}
+          echo "${{ env.CURRENT_VERSION }}"
+          echo "${{ github.event.pull_request.milestone }}"
           if [[ ${{ env.CURRENT_VERSION }} == null ]]; then
             echo "마일스톤을 등록해 주세요."
             exit 1
