--- a/.github/workflows/pr-label.yml
+++ b/.github/workflows/pr-label.yml
@@ -1,4 +1,4 @@
-name: Label a PR with its package update
+name: Label a PR with its updated packages
 
 on:
   pull_request:
@@ -7,8 +7,6 @@ on:
 jobs:
   label-pr:
     runs-on: ubuntu-latest
-    # =============== 테스트용. 이후 제거할 예정입니다 ===============
-    if: ${{ github.event.pull_request.head.ref == 'feat/automate-changelog' }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -20,7 +18,7 @@ jobs:
           RESPONSE=$(curl -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           -H "Accept: application/vnd.github.v3+json" \
           "https://api.github.com/repos/${{ github.repository }}/compare/${{ github.event.pull_request.base.ref }}...${{ github.event.pull_request.head.ref }}")
-          
+
           if [[ $(echo "$RESPONSE" | jq '.total_commits') == null ]]; then
             echo $RESPONSE | jq '.message'
             exit 1
