--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "axios": "^0.26.0"
+    "axios": "^0.26.0",
+    "server-only": "0.0.1"
   }
 }
