--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Fetch PRs in current version's milestone and write a question to ChatGPT
         run: |
-          RESPONSE=$(curl -H "Accept: application/vnd.github+json" -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/search/issues?q=milestone:${{ env.CURRENT_VERSION }}+type:pr+repo:$GITHUB_REPOSITORY")
+          RESPONSE=$(curl -H "Accept: application/vnd.github+json" -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/search/issues?q=milestone:${{ env.CURRENT_VERSION }}+type:pr+repo:$GITHUB_REPOSITORY&per_page=100")
 
           if [[ $(echo "$RESPONSE" | jq '.total_count') == null ]]; then
             echo $RESPONSE | jq '.message'
@@ -40,13 +40,13 @@ jobs:
             jq "[.items[] | \
               select(.pull_request.merged_at != null and \
                      (.labels | map(select(.name == \"release\")) | length == 0)) | \
-              {title: .title, number: .number, url: .html_url, package: .labels[].name}] | \
+              {title: .title, number: .number, url: .html_url, packages: .labels[].name}] | \
               group_by(.number) | \
-              map({ title: .[0].title, number: .[0].number, url: .[0].url, package: [.[].package] }) | \
+              map({ title: .[0].title, number: .[0].number, url: .[0].url, packages: [.[].packages] }) | \
               tostring" | \
             sed 's/^"//;s/"$//')
-          echo "CHAT_GPT_PROMPT=$(echo Please write me a markdown using this data\\n$PRS_IN_MILESTONE\\nin the following format\\n\\n### package\\n- title [#number]\(url\)\\n- title [#number]\(url\)\\n\\n### package\\n\\n- title [#number]\(url\)\\n- title [#number]\(url\)\\n \
-            Please filter out emojis when writing package name in the markdown, and if the item has multiple packages write it in multiple package group. Note that each package group must not be duplicated.)" >> $GITHUB_ENV
+            echo "CHAT_GPT_PROMPT=$(echo Using the following data, please write a Markdown list in the format of \`\`\`### {{package1}}\\n\\n- {{title1}} [#{{number1}}]\({{url1}}\)\\n\\n### {{package2}}\\n\\n- {{title2}} [#{{number2}}]\({{url2}}\)\\n\\n...\\n\\n### {{packageN}}\\n\\n- {{titleN}} [#{{numberN}}]\({{urlN}}\)\`\`\` \
+              where \`{{package}}\` is the package name in the \`packages\` field with any emojis removed, and only single package. If there are multiple packages in an item, write each one separately. The \`{{title}}\` field should be used for the title, \`{{number}}\` for the number, and \`{{url}}\` for the url of a list item. The data is:\\n\`\`\`$PRS_IN_MILESTONE\`\`\`)" >> $GITHUB_ENV
 
       - name: Request ChatGPT to write down CHANGELOG
         env:
@@ -56,8 +56,8 @@ jobs:
            -H "Content-Type: application/json" \
            -H "Authorization: Bearer $OPENAI_KEY" \
            -d '{
-              "model": "gpt-3.5-turbo",
-              "temperature": 0.2,
+              "model": "text-davinci-003",
+              "temperature": "0"
               "messages": [
                 {
                   "role": "user",
