--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -57,7 +57,7 @@ jobs:
            -H "Authorization: Bearer $OPENAI_KEY" \
            -d '{
               "model": "text-davinci-003",
-              "temperature": 0
+              "temperature": 0,
               "messages": [
                 {
                   "role": "user",
