--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -63,7 +63,8 @@ jobs:
           )
 
           echo $RESPONSE | jq
-          changelog_content=$(echo $RESPONSE | jq -r '.choices[].message.content')
+          changelog_content=$(echo $RESPONSE | jq -r '.choices[].text')
+          echo $changelog_content
 
           printf '\n%s\n\n' "## ${{ env.CURRENT_VERSION }}" >> changelog_tmp.md
           echo -e "$changelog_content" >> changelog_tmp.md
