--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -28,7 +28,7 @@ jobs:
           ref: ${{ github.event.pull_request.head.ref }}
 
       - name: Fetch PRs in current version's milestone and write a question to ChatGPT
-        run: node scripts/changelog.js
+        run: node "${{ github.workspace }}/scripts/changelog.js"
 
       #     RESPONSE=$(curl -H "Accept: application/vnd.github+json" -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/search/issues?q=milestone:${{ env.CURRENT_VERSION }}+type:pr+repo:$GITHUB_REPOSITORY&per_page=100")
 
@@ -60,7 +60,7 @@ jobs:
       #         "model": "text-davinci-003",
       #         "temperature": 0,
       #         "prompt": "${{ env.CHAT_GPT_PROMPT }}"
-      #       }' 
+      #       }'
       #     )
 
       #     echo $RESPONSE | jq
