--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "portbullio",
-  "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
-  "scripts": {
-    "prepare": "husky install"
-  },
-  "devDependencies": {
-    "@types/jest": "^27.4.0",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "eslint": "^8.9.0",
-    "eslint-config-airbnb-typescript": "^16.1.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^7.0.4",
-    "jest": "^27.5.1",
-    "lerna": "^4.0.0",
-    "prettier": "^2.5.1",
-    "ts-jest": "^27.1.4",
-    "typescript": "^4.6.4"
-  },
-  "dependencies": {
-    "axios": "^0.26.0",
-    "server-only": "0.0.1"
-  }
+	"name": "portbullio",
+	"private": true,
+	"workspaces": [
+		"packages/*"
+	],
+	"scripts": {
+		"prepare": "husky install"
+	},
+	"devDependencies": {
+		"@types/jest": "^27.4.0",
+		"@typescript-eslint/eslint-plugin": "^5.12.0",
+		"@typescript-eslint/parser": "^5.12.0",
+		"eslint": "^8.9.0",
+		"eslint-config-airbnb-typescript": "^16.1.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-import": "^2.25.4",
+		"eslint-plugin-jest": "^26.1.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"husky": "^7.0.4",
+		"jest": "^27.5.1",
+		"lerna": "^4.0.0",
+		"prettier": "^2.5.1",
+		"ts-jest": "^27.1.4",
+		"typescript": "^4.6.4"
+	},
+	"dependencies": {
+		"node-fetch": "2.6.9",
+		"server-only": "0.0.1"
+	}
 }
