--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -28,7 +28,10 @@ jobs:
           ref: ${{ github.event.pull_request.head.ref }}
 
       - run: npm install
-      
+
       - name: Execute Changelog JavaScript
         run: node scripts/changelog.js
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
+      - run: echo ${{ secrets.OPENAI_API_KEY }}
