--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -9,6 +9,8 @@ env:
   COMMIT_USER_EMAIL: developer@triple-corp.com
   COMMIT_USER_NAME: triple-frontend[bot]
   CURRENT_VERSION: ${{ github.event.pull_request.milestone.title }}
+  NODE_VERSION: 'lts/*'
+  NPM_REGISTRY_URL: 'https://registry.npmjs.org'
 
 jobs:
   update-changelog:
@@ -26,6 +28,13 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.ref }}
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          registry-url: ${{ env.NPM_REGISTRY_URL }}
+          cache: 'npm'
 
       - run: npm install
 
