--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -36,6 +36,8 @@ jobs:
           registry-url: ${{ env.NPM_REGISTRY_URL }}
           cache: 'npm'
 
+      - run: npm install
+
       - name: Execute Changelog JavaScript
         run: node scripts/changelog.js
         env:
