--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -37,7 +37,7 @@ jobs:
           registry-url: ${{ env.NPM_REGISTRY_URL }}
           cache: 'npm'
 
-      - run: npm i node-fetch@v2
+      - run: npm i node-fetch@v2 prettier
 
       - name: Execute Changelog JavaScript
         run: node scripts/changelog.js
@@ -46,7 +46,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run prettier on CHANGELOG.md
-        run: npm prettier --write CHANGELOG.md
+        run: npm run prettier --write CHANGELOG.md
 
       - name: Commit and push updated CHANGELOG
         env:
