--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -46,7 +46,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run prettier on CHANGELOG.md
-        run: npm run prettier --write CHANGELOG.md
+        run: npx prettier --write CHANGELOG.md
 
       - name: Commit and push updated CHANGELOG
         env:
