--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -6,8 +6,8 @@ on:
       - labeled
 
 env:
-  COMMIT_USER_EMAIL: developer@triple-corp.com
-  COMMIT_USER_NAME: triple-frontend[bot]
+  COMMIT_USER_EMAIL: triple-bot@interpark.com
+  COMMIT_USER_NAME: TRIPLE Bot
   CURRENT_VERSION: ${{ github.event.pull_request.milestone.title }}
   NODE_VERSION: 'lts/*'
   NPM_REGISTRY_URL: 'https://registry.npmjs.org'
@@ -56,4 +56,6 @@ jobs:
           git config --local user.name "${{ env.COMMIT_USER_NAME }}"
           git add CHANGELOG.md
           git commit -m "Update ${{ env.CURRENT_VERSION }} CHANGELOG"
-          git push
+          git fetch origin ${{ github.head_ref }}
+          git rebase origin/${{ github.head_ref }}
+          git push origin/${{ github.head_ref }}
