--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -54,9 +54,8 @@ jobs:
         run: |
           git config --local user.email "${{ env.COMMIT_USER_EMAIL }}"
           git config --local user.name "${{ env.COMMIT_USER_NAME }}"
-          git add CHANGELOG.md
+          git add .
           git commit -m "Update ${{ env.CURRENT_VERSION }} CHANGELOG"
-          git status
           git fetch origin ${{ github.head_ref }}
           git rebase origin/${{ github.head_ref }}
           git push origin ${{ github.head_ref }}
