--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -46,8 +46,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.TRIPLE_BOT_GITHUB_TOKEN }}
         run: |
-          git config user.name "$(git log -n 1 --pretty=format:%an)"
-          git config user.email "$(git log -n 1 --pretty=format:%ae)"
+          git config user.name "jhk48"
+          git config user.email "kjhyeon30@gmail.com"
           git add .
           git commit -m "Update ${{ env.CURRENT_VERSION }} CHANGELOG"
           git fetch origin ${{ github.head_ref }}
